# advent-of-code-2020

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
advent_of_code_2020/day01/: __init__.py
advent_of_code_2020/day02/: __init__.py
advent_of_code_2020/day1/: __init__.py
tests/: test_advent_of_code_2020.py
tests/day01/: test_day01.py
tests/day02/: test_day02.py
