[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.0"
description = ""
authors = ["Johan Vergeer <johanvergeer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.9.2"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["advent_of_code_2020", "tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
